--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -34,12 +34,13 @@
 
   <p class='footer-right'>
     {{ 'Powered by'|trans }}
-    <a href='https://www.elabftw.net'>eLabFTW</a> {{ App.Session.has('is_auth') ? constant('Elabftw\\Elabftw\\App::INSTALLED_VERSION') }}<br>
-        {{ 'Page generated in'|trans }} {{ generationTime() }} {{ 'seconds'|trans }}
+    <a href='https://www.elabftw.net'>eLabFTW</a> {% if App.Session.has('is_auth') %}<a href="{{ constant('Elabftw\\Elabftw\\App::WHATSNEWLINK') }}">{{ constant('Elabftw\\Elabftw\\App::INSTALLED_VERSION') }}</a>{% endif %}<br>
+    Made with ♥ by <a href='https://www.deltablot.com'>Deltablot</a>
     {% if App.Config.configArr.debug %}
-        ({{ numberOfQueries() }} SQL)
-        <br>{{ 'Memory usage:'|trans }}
-        {{ memoryUsage()|formatBytes }} ({{ memoryUsage() }} {{ 'bytes'|trans }})
+      <br>{{ 'Page generated in' }} {{ generationTime() }} {{ 'seconds'|trans }}
+      ({{ numberOfQueries() }} SQL)
+      <br>{{ 'Memory usage:'|trans }}
+      {{ memoryUsage()|formatBytes }} ({{ memoryUsage() }} {{ 'bytes'|trans }})
     {% endif %}
   </p>
 </footer>
