correctly reload timestamp info/files after timestamp
and make updateTimestamp part of AbstractMakeTimestamp

--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -19,9 +19,11 @@
 
 {% include('view-edit-toolbar.html') %}
 
+<div id='isTimestampedByInfoDiv'>
 {% if Entity.entityData.timestamped %}
   {{ 'Experiment was timestamped by %s on %s at %s'|trans|format(timestamperFullname, Entity.entityData.timestamped_at|date('Y-m-d'), Entity.entityData.timestamped_at|date('H:i:s'))|raw|msg('ok', false) }}
 {% endif %}
+</div>
 
 {% if Entity.entityData.locked %}
   {{ 'Locked by %s on %s at %s'|trans|format(lockerFullname, Entity.entityData.locked_at|date('Y-m-d'), Entity.entityData.locked_at|date('H:i:s'))|raw|msg('ok', false) }}
