--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -89,7 +89,7 @@
       <textarea aria-label='{{ 'Main content'|trans }}' id='body_area' class='markdown-textarea' data-language='{{ App.getJsLang }}' name='body'>{{ Entity.entityData.body }}</textarea>
     {% else %}
     {# do not display body if set in metadata, done via css to avoid delayed disappearance after JS is executed #}
-      <textarea aria-label='{{ 'Main content'|trans }}' id='body_area' class='mceditable invisible' name='body' rows='15' cols='80'>{{ Entity.entityData.body }}</textarea>
+      <textarea aria-label='{{ 'Main content'|trans }}' id='body_area' class='mceditable invisible' name='body'>{{ Entity.entityData.body }}</textarea>
     {% endif %}
   </div>
 
