--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -110,7 +110,11 @@
       {% endif %}
       {# do not display body if set in metadata, done via css to avoid delayed disappearance after JS is executed #}
       {# body in view mode is text-dark for more lisibility see github issue #52 #}
-      <div id='body_view' class='pt-2 text-dark' {{ not displayMainText ? 'hidden' }}>{{ body|raw }}</div>
+      <div {{ not displayMainText ? 'hidden' }}>
+        <h3 data-action='toggle-next'class='d-inline togglable-section-title'><i class='fas fa-caret-down fa-fw mr-2'></i>{{ 'Main text'|trans }}</h3>
+        <div id='body_view' class='pt-2 text-dark'>{{ body|raw }}</div>
+        <hr>
+      </div>
   {% endif %}
 
 </section>
