add units to extra fields for numbers inputs
fix #3518

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -447,9 +447,10 @@ button:disabled {
 }
 
 /* required labels/input for extra fields */
-#metadataDiv {
-    /* target the required fields, but only if they are invalid: empty or incorrect */
-    [required]:invalid {
+#metadataDiv,
+#newFieldForm {
+    /* any invalid field will get this red border */
+    :invalid {
         border: 1px solid $lightred;
     }
 
