--- a/src/templates/field-builder-modal.html
+++ b/src/templates/field-builder-modal.html
@@ -49,7 +49,7 @@
             </select>
 
             <!-- NAME -->
-            <label for='newFieldKeyInput'>{{ 'Name'|trans }} <span class='smallgray'>({{ 'required'|trans }})</span></label>
+            <label for='newFieldKeyInput' class='required-label'>{{ 'Name'|trans }} <span class='smallgray'>({{ 'required'|trans }})</span></label>
             <input type='text' autocomplete='off' required placeholder='{{ 'Name'|trans }}' id='newFieldKeyInput' class='form-control'>
 
             <!-- DESCRIPTION -->
@@ -86,8 +86,8 @@
             <div id='newFieldContentDiv_selectradio' hidden>
               <label>{{ 'Choices'|trans }}</label>
               <div id='choicesInputDiv'>
-                <input type='text' class='form-control mb-1 newFieldOption' autocomplete='off'>
-                <input type='text' class='form-control mb-1 newFieldOption' autocomplete='off'>
+                <input type='text' class='form-control mb-1' autocomplete='off'>
+                <input type='text' class='form-control mb-1' autocomplete='off'>
               </div>
               <button type='button' class='btn btn-secondary btn-sm' data-action='new-field-add-option'>{{ 'Add another choice'|trans }}</button>
               <!-- this is only shown for select type -->
@@ -98,6 +98,16 @@
                   <label class='custom-control-label' for='newFieldAllowMultiSelect'>{{ 'Allow selection of multiple values?'|trans }}</label>
                 </div>
               </div>
+            </div>
+
+            <!-- UNITS for NUMBER -->
+            <div id='newFieldContentDiv_number' hidden>
+              <label>{{ 'Available units'|trans }}</label>
+              <div id='unitChoicesInputDiv'>
+                <input type='text' class='form-control mb-1' autocomplete='off'>
+                <input type='text' class='form-control mb-1' autocomplete='off'>
+              </div>
+              <button type='button' class='btn btn-secondary btn-sm' data-action='new-field-add-option'>{{ 'Add another choice'|trans }}</button>
             </div>
 
             <!-- CHECKBOX -->
