improve sync between extra fields and json editor. fix #4343

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -828,6 +828,10 @@ the form-control fails to do that so we do the border ourselves */
     color: $dangerred !important;
 }
 
+.border-danger {
+    border: 1px solid $lightred !important;
+}
+
 .color-warning {
     color: #856404 !important;
 }
