--- a/src/templates/json-editor.html
+++ b/src/templates/json-editor.html
@@ -47,6 +47,7 @@
           <i class='fas fa-save fa-fw'></i>
         </div>
       </div>
+      <span hidden id='jsonUnsavedChangesWarningDiv'>{{ 'You have unsaved changes'|trans }}</span>
 
       {# CLEAR #}
       <div class='ml-auto d-flex align-items-center'>
