--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -37,7 +37,7 @@
   </div>
   <div class='col-md-4'>
     <div class='d-flex justify-content-between'>
-      <h4>Scheduled bookings</h4>
+      <h4>{{ 'Scheduled bookings'|trans }}</h4>
       <a href='team.php?tab=1'><button type='button' class='btn btn-secondary'>{{ 'Scheduler'|trans }}</button></a>
     </div>
     <ul class='list-group mt-2'>
