--- a/src/templates/field-builder-modal.html
+++ b/src/templates/field-builder-modal.html
@@ -59,27 +59,6 @@
             <div id='newFieldContentDiv_classic'>
               <label for='newFieldValueInput'>{{ 'Default value'|trans }}</label>
               <input type='text' autocomplete='off' placeholder='{{ 'Enter a default value'|trans }}' id='newFieldValueInput' class='form-control'>
-              <div class='separator'></div>
-              <!-- Blank value on duplicate switch -->
-              <div>
-                <div class='d-inline-flex flex-row'>
-                  <div class='d-inline mr-1' for='blankValueOnDuplicateSwitch'><p>{{ 'Blank value on duplicate'|trans }}</p></div>
-                  <label class='switch'>
-                    <input type='checkbox' autocomplete='off' id='blankValueOnDuplicateSwitch'>
-                    <span class='slider'></span>
-                  </label>
-                </div>
-                </div>
-              <div>
-                {# required switch #}
-                <div class='d-inline-flex flex-row'>
-                  <div class='d-inline mr-1' for='requiredSwitch'><p>{{ 'Required'|trans }}</p></div>
-                  <label class='switch'>
-                    <input type='checkbox' autocomplete='off' id='requiredSwitch'>
-                    <span class='slider'></span>
-                  </label>
-                </div>
-              </div>
             </div>
 
             <!-- SELECT, RADIO -->
@@ -117,6 +96,28 @@
                 <option value='unchecked'>{{ 'Unchecked'|trans }}</option>
                 <option value='checked'>{{ 'Checked'|trans }}</option>
               </select>
+            </div>
+
+            <div class='separator'></div>
+            {# Blank value on duplicate switch #}
+            <div>
+              <div class='d-inline-flex flex-row'>
+                <div class='d-inline mr-1' for='blankValueOnDuplicateSwitch'><p>{{ 'Blank value on duplicate'|trans }}</p></div>
+                <label class='switch'>
+                  <input type='checkbox' autocomplete='off' id='blankValueOnDuplicateSwitch'>
+                  <span class='slider'></span>
+                </label>
+              </div>
+            </div>
+            {# required switch #}
+            <div>
+              <div class='d-inline-flex flex-row'>
+                <div class='d-inline mr-1' for='requiredSwitch'><p>{{ 'Required'|trans }}</p></div>
+                <label class='switch'>
+                  <input type='checkbox' autocomplete='off' id='requiredSwitch'>
+                  <span class='slider'></span>
+                </label>
+              </div>
             </div>
 
         </div>
