--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -23,8 +23,8 @@
 
   <title>{{ App.pageTitle }} - eLabFTW</title>
   <!-- load open vector editor -->
-  <link rel='stylesheet' type='text/css' href='assets/ove/main.css?v={{ v }}'>
-  <script defer src='assets/ove/open-vector-editor.min.js?v={{ v }}'></script>
+  <link rel='stylesheet' type='text/css' href='assets/ove/style.css?v={{ v }}'>
+  <script defer src='assets/ove/index.umd.js?v={{ v }}'></script>
 
   <!-- see builder.js to see what gets inside these files -->
   <!-- CSS -->
