fix bug with sending email to all users from sysconfig panel

--- a/src/templates/sysconfig.html
+++ b/src/templates/sysconfig.html
@@ -288,7 +288,7 @@
     <label>{{ 'Send to'|trans }}</label>
 
     <div class='form-check'>
-      <input class='form-check-input' type='radio' name='target' value='all' id='targetAll' checked> <label class='form-check-label' for='targetAll'>{{ 'All active users'|trans }}</label>
+      <input class='form-check-input' type='radio' name='target' value='active_users' id='targetAll' checked> <label class='form-check-label' for='targetAll'>{{ 'All active users'|trans }}</label>
     </div>
 
     <div class='form-check'>
