--- a/src/templates/field-builder-modal.html
+++ b/src/templates/field-builder-modal.html
@@ -119,6 +119,16 @@
                 </label>
               </div>
             </div>
+            {# readonly switch #}
+            <div>
+              <div class='d-inline-flex flex-row'>
+                <div class='d-inline mr-1' for='readonlySwitch'><p>{{ 'Read-only'|trans }}</p></div>
+                <label class='switch'>
+                  <input type='checkbox' autocomplete='off' id='readonlySwitch'>
+                  <span class='slider'></span>
+                </label>
+              </div>
+            </div>
 
         </div>
         <div class='modal-footer'>
