--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -70,14 +70,14 @@
             <textarea id='cancelEventTextarea' class='form-control'></textarea>
             <label>{{ 'Send to'|trans }}</label>
             <div class='form-check'>
-              <input class='form-check-input' type='radio' name='targetCancelEvent' value='users' id='targetCancelEventUsers' checked> <label class='form-check-label' for='targetCancelEventUsers'>{{ 'Past and future users who booked this resource'|trans }}</label>
+              <input class='form-check-input' type='radio' name='targetCancelEvent' data-targetid='{{ App.Request.query.get('item') }}' value='bookable_item' id='targetCancelEventUsers' checked> <label class='form-check-label' for='targetCancelEventUsers'>{{ 'Past and future users who booked this resource'|trans }}</label>
             </div>
             <div class='form-check'>
-              <input class='form-check-input' type='radio' name='targetCancelEvent' value='team' id='targetCancelEventTeam'> <label class='form-check-label' for='targetCancelEventTeam'>{{ 'Members of team %s'|trans|format(App.teamArr.name|raw) }}</label>
+              <input class='form-check-input' type='radio' name='targetCancelEvent' data-targetid='{{ App.teamArr.id }}' value='team' id='targetCancelEventTeam'> <label class='form-check-label' for='targetCancelEventTeam'>{{ 'Members of team %s'|trans|format(App.teamArr.name|raw) }}</label>
             </div>
             {% for teamgroup in teamGroupsArr %}
               <div class='form-check'>
-                <input class='form-check-input' type='radio' name='targetCancelEvent' value='teamgroup_{{ teamgroup.id }}' id='targetCancelEventTeamgroup_{{ teamgroup.id }}'> <label class='form-check-label' for='targetCancelEventTeamgroup_{{ teamgroup.id }}'>{{ 'Members of teamgroup %s'|trans|format(teamgroup.name|raw) }}</label>
+                <input class='form-check-input' type='radio' name='targetCancelEvent' data-targetid='{{ teamgroup.id }}' value='teamgroup' id='targetCancelEventTeamgroup_{{ teamgroup.id }}'> <label class='form-check-label' for='targetCancelEventTeamgroup_{{ teamgroup.id }}'>{{ 'Members of teamgroup %s'|trans|format(teamgroup.name|raw) }}</label>
               </div>
             {% endfor %}
             <div class='mt-2'>
