--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -84,7 +84,7 @@
       <option value='eln'>{{ 'Make an ELN'|trans }}</option>
       <option value='zip'>{{ 'Make Zip'|trans }}</option>
       <option value='csv'>{{ 'Make Csv'|trans }}</option>
-      <option value='multipdf'>{{ 'Make PDF'|trans }}</option>
+      <option value='pdf'>{{ 'Make PDF'|trans }}</option>
       <option value='qrpdf'>{{ 'Make QR codes PDF'|trans }}</option>
       <option value='json'>{{ 'Make JSON'|trans }}</option>
     </select>
