--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -198,7 +198,7 @@
             <option value='eln'>{{ 'ELN Archive'|trans }}</option>
             <option value='zip'>{{ 'ZIP Archive'|trans }}</option>
             <option value='csv'>{{ 'CSV File'|trans }}</option>
-            <option value='multipdf'>{{ 'PDF File'|trans }}</option>
+            <option value='pdf'>{{ 'PDF File'|trans }}</option>
             <option value='qrpdf'>{{ 'QR codes PDF'|trans }}</option>
             <option value='json'>{{ 'JSON'|trans }}</option>
           </select>
