--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -129,6 +129,17 @@
         </select>
       </form>
     </div>
+
+    {% if bookableItemData %}
+      <div class='col-md-3 ml-auto'>
+        <div class='input-group justify-content-end'>
+          <div class='input-group-prepend'>
+            <button class='btn btn-secondary' data-action='remove-param-reload' data-target='item'>X</button>
+          </div>
+          <a href='database.php?mode=view&id={{ bookableItemData.id }}'  class='list-group-item hl-hover-gray'><span style='--bg: #{{ bookableItemData.color }}' class='category-button rounded p-1 mr-2'>{{ bookableItemData.category }}</span>{{ bookableItemData.title|raw }}</a>
+        </div>
+      </div>
+    {% endif %}
   </div>
   {% endif %}
   <div id='scheduler' data-lang='{{ App.getJsLang }}' data-render={{ itemsArr|length > 0 ? 'true' : 'false' }}></div>
