--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -15,7 +15,7 @@
 <div class='row'>
   <div class='col-md-4'>
     <div class='d-flex justify-content-between'>
-      <h4>{% trans %}Experiment{% plural 2 %}Experiments{% endtrans %}<h4>
+      <h4>{% trans %}Experiment{% plural 2 %}Experiments{% endtrans %}</h4>
       {% include 'create-new.html' with {'entityPage': 'experiments.php'} %}
     </div>
     <ul class='list-group'>
