remove unused twig variables

--- a/src/templates/view-permissions.html
+++ b/src/templates/view-permissions.html
@@ -1,4 +1,4 @@
-{# required vars: rw, can: coming from canread or canwrite with canToHuman filter #}
+{# required vars: rw: coming from canread or canwrite #}
 {# default icon/label are for canread #}
 {% set icon = 'eye' %}
 {% set label = 'Visibility'|trans %}
