--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -34,30 +34,30 @@
         </div>
 
         <!-- BIND EXPERIMENT -->
-        <div id='eventBoundExp'></div>
-        <button data-action='scheduler-rm-bind' data-type='experiment' aria-hidden='true' class='btn btn-danger' type='button'>{{ 'Unbind'|trans }}</button>
         <div class='mt-2'>
           <i class='fas fa-link mr-1'></i><h5 class='d-inline'>{{ 'Bind an experiment'|trans }}</h5>
+          <div id='eventBoundExp'></div>
+          <button data-action='scheduler-rm-bind' data-type='experiment' data-eventid='' aria-hidden='true' class='btn btn-sm btn-danger mb-2' type='button'>{{ 'Unbind'|trans }}</button>
             <div id='binddivexp' class='input-group mb-3'>
                 <div class='input-group-prepend'>
                     <span class='input-group-text'>{{ 'Search'|trans }}</span>
                 </div>
-                <input type='text' id='bindexpinput' class='form-control' />
+                <input type='text' id='bindexpinput' class='form-control bindInput' />
                 <div class='input-group-append'>
                   <button class='btn btn-primary' data-input='bindexpinput' data-action='scheduler-bind-entity' data-type='experiment' type='button'>{{ 'Attach'|trans }}</button>
                 </div>
             </div>
         </div>
         <!-- BIND ITEM -->
-        <div id='eventBoundDb'></div>
-        <button data-action='scheduler-rm-bind' data-type='item_link' aria-hidden='true' class='btn btn-danger' type='button'>{{ 'Unbind'|trans }}</button>
         <div class='mt-2'>
           <i class='fas fa-link mr-1'></i><h5 class='d-inline'>{{ 'Bind an item'|trans }}</h5>
+          <div id='eventBoundDb'></div>
+          <button data-action='scheduler-rm-bind' data-type='item_link' data-eventid='' aria-hidden='true' class='btn btn-sm btn-danger mb-2' type='button'>{{ 'Unbind'|trans }}</button>
             <div id='binddivdb' class='input-group mb-3'>
                 <div class='input-group-prepend'>
                     <span class='input-group-text'>{{ 'Search'|trans }}</span>
                 </div>
-                <input type='text' id='binddbinput' class='form-control' />
+                <input type='text' id='binddbinput' class='form-control bindInput' />
                 <div class='input-group-append'>
                   <button class='btn btn-primary' data-input='binddbinput'  data-action='scheduler-bind-entity' data-type='item_link' type='button'>{{ 'Attach'|trans }}</button>
                 </div>
