--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -25,11 +25,11 @@
               <code><span class='token operator'>!</span></code>,
               <code><span class='token punctuation'>(</span></code>,
               <code><span class='token punctuation'>)</span></code>,
-              <code><sapn class='token string'>'</span></code> and
-              <code><sapn class='token string'>"</span></code>.<br>
-              <em><code><sapn class='token string'>termA</span></code></em> or
-              <em><code><sapn class='token string'>termB</span></code></em> or
-              <em><code><sapn class='token string'>456</span></code></em>
+              <code><span class='token string'>'</span></code> and
+              <code><span class='token string'>"</span></code>.<br>
+              <em><code><span class='token string'>termA</span></code></em> or
+              <em><code><span class='token string'>termB</span></code></em> or
+              <em><code><span class='token string'>456</span></code></em>
           </dd>
           <dt>Quoted term</dt>
           <dd>A sequence of characters including space (<code>&blank;</code>)
@@ -210,6 +210,7 @@
       <input
         id='extendedArea'
         name='q'
+        type='text'
         class='form-control'
         placeholder="{{ 'Enter search query, e.g.: %s'|trans|format(getExtendedSearchExample()) }}"
         spellcheck='false'
