--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -62,18 +62,30 @@
 
   <!-- CATEGORIES (status for exp and itemstypes for items) -->
   <div class='d-flex mb-2 align-items-center'>
-    <label for='category_select' class='col-form-label mr-3 edit-mode-label'>
-    {% if Entity.type == 'experiments' %}
-      {% trans %}Status{% plural 1 %}Status{% endtrans %}
-    {% else %}
-      {{ 'Category'|trans }}
-    {% endif %}
-    </label>
-    <select id='category_select' class='form-control col-md-2'>
+    <label for='category_select' class='col-form-label mr-3 edit-mode-label'>{{ 'Category'|trans }}</label>
+    <select id='category_select' data-target='category' class='form-control col-md-2 catstatSelect'>
       <!-- TODO add a box with color -->
+        <option value='0'
+                {{ Entity.entityData.category is null ? ' selected' }}>{{ 'Not set'|trans }}</option>
       {% for category in categoryArr %}
-        <option value='{{ category.category_id }}'
-        {{ Entity.entityData.category_id == category.category_id ? ' selected' }}>{{ category.category|raw }}</option>
+        <option value='{{ category.id }}'
+        {{ Entity.entityData.category == category.id ? ' selected' }}>{{ category.title|raw }}</option>
+      {% endfor %}
+    </select>
+  </div>
+
+  {# STATUS #}
+  <div class='d-flex mb-2 align-items-center'>
+    <label for='status_select' class='col-form-label mr-3 edit-mode-label'>
+      {% trans %}Status{% plural 1 %}Status{% endtrans %}
+    </label>
+    <select id='status_select' data-target='status' class='form-control col-md-2 catstatSelect'>
+      <!-- TODO add a box with color -->
+        <option value='0'
+                {{ Entity.entityData.status is null ? ' selected' }}>{{ 'Not set'|trans }}</option>
+      {% for status in statusArr %}
+        <option value='{{ status.id }}'
+                {{ Entity.entityData.status|default(0) == status.id ? ' selected' }}>{{ status.title|raw }}</option>
       {% endfor %}
     </select>
   </div>
