--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -48,7 +48,7 @@
   {# TITLE #}
   <h1 id='documentTitle' class='mb-4 title text-dark'>
     {% if Entity.type == 'items' %}
-      <span style='color:#{{ Entity.entityData.color }}'>{{ Entity.entityData.category }}</span>
+      <span style='color:#{{ Entity.entityData.category_color }}'>{{ Entity.entityData.category_title }}</span>
     {% endif %}
     {{ Entity.entityData.title|raw }}
   </h1>
@@ -56,9 +56,17 @@
   {# CATEGORY #}
   <div class='d-flex mb-2 align-items-center'>
     <div class='edit-mode-label'>
-      <i aria-hidden='true' class='fas fa-folder mr-1'></i>{{ Entity.type == 'experiments' ? 'Status'|trans : 'Category'|trans }}
+      <i aria-hidden='true' class='fas fa-folder mr-1'></i>{{ 'Category'|trans }}
     </div>
-    <span id='categoryView' style='--bg: #{{ Entity.entityData.color }}' class='category-button malleableCategory hl-hover-gray rounded p-1'>{{ Entity.entityData.category | raw}}</span>
+    <span style='--bg: #{{ Entity.entityData.category_color|default('bdbdbd') }}' data-target='category' class='category-button malleableCategory hl-hover-gray rounded p-1'>{{ Entity.entityData.category_title|raw|default('Not set'|trans) }}</span>
+  </div>
+
+  {# STATUS #}
+  <div class='d-flex mb-2 align-items-center'>
+    <div class='edit-mode-label'>
+      <i aria-hidden='true' class='fas fa-check-square mr-1'></i>{{ 'Status'|trans }}
+    </div>
+    <span style='--bg: #{{ Entity.entityData.status_color|default('bdbdbd') }}' data-target='status' class='category-button malleableStatus hl-hover-gray rounded p-1'>{{ Entity.entityData.status_title|raw|default('Not set'|trans) }}</span>
   </div>
 
   {# TAGS #}
