--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -323,20 +323,21 @@
   </div>
 </div>
 
-<!-- TAB 5 STATUS -->
+{# TAB 5 STATUS #}
 <div data-tabcontent='5' hidden>
+  {# EXPERIMENTS STATUS #}
   <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Experiments Status'|trans }}</h3>
   <div class='pl-3 mb-5' id='experiments_statusDiv'>
     <div {{ App.Request.query.has('templateid') ? 'hidden' }}>
       <div class='mb-2 d-flex justify-content-between'>
         <p class='col-form-label'>{{ 'Create and modify the categories available to experiments.'|trans }}</p>
-        <!-- CREATE NEW BUTTON the div around the button is necessary or the button itself gets resized on small viewports -->
+        {# CREATE NEW BUTTON the div around the button is necessary or the button itself gets resized on small viewports #}
         <div>
           <button type='button' class='btn btn-primary' data-action='toggle-modal' data-target='createexperiments_statusModal'>{{ 'Create'|trans }}</button>
         </div>
       </div>
     </div>
-    <ul class='list-group sortable' data-axis='y' data-table='experiments_status'>
+    <ul class='list-group sortable mb-5' data-axis='y' data-table='experiments_status'>
       {% for status in statusArr %}
         <li id='status_{{ status.id }}' data-statusid='status_{{ status.id }}' class='list-group-item'>
           <ul class='list-inline'>
